# precomputed_python

./: .gitignore  README.md  example.ipynb  mkdocs.yml  pyproject.toml
docs/: index.md
docs/reference/: api.md
src/precomputed_python/: __init__.py  interface.py
